# contextforge

./: .gitignore  README.md  contextforge.py  dev-requirements.txt  mypalclaude.md  pyproject.toml  requirements.txt
src/contextforge/: contextforge.py
tests/: test_contextforge.py
