[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextforge"
version = "0.1.0"
description = "A Python library for handling context in applications"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Sebastian Eschweiler", url = "https://github.com/seeschweiler" },
    { name = "Bang Rocket", url = "https://github.com/BangRocket" },
    { name = "Graham G", url = "https://github.com/grahamg" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=0.27.0",
    "pydantic>=1.10.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.3.1",
    "pytest-randomly>=3.13.0",
    "pytest-sugar>=0.9.7",
    "pytest-timeout>=2.1.0",
    "coverage[toml]>=7.2.0",
    "tox>=4.6.0",
    "hypothesis>=6.82.0",
]
lint = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "types-all>=1.0.0",
    "bandit>=1.7.5",
]
dev = [
    "ipdb>=0.13.0",
    "doctest-plus>=0.7.0",
]
all = [
    "contextforge[test,lint,dev]"
]

[tool.hatch.build.targets.wheel]
packages = ["src/contextforge"]

